fixed button placement issue on Contact page, now need to adjust PageStructre component spacing

--- a/src/Components/PageStructure/PageStructure.css
+++ b/src/Components/PageStructure/PageStructure.css
@@ -1,4 +1,7 @@
 @media (min-width: 1px) {
+  .pageStructure {
+    margin-bottom: 48px;
+  }
   .pageTitle {
     margin: 60px 16px 0 16px;
   }
@@ -8,6 +11,9 @@
 }
 
 @media (min-width: 500px) {
+  .pageStructure {
+    margin-bottom: 960px;
+  }
   .pageTitle {
     margin: 60px 32px 0px 32px;
   }
@@ -17,6 +23,9 @@
 }
 
 @media (min-width: 768px) {
+  .pageStructure {
+    margin-bottom: 960px;
+  }
   .pageTitle {
     text-align: center;
   }
